Update script location

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Progress timer demo</title>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/adamcik/media-progress-timer/master/timer.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/adamcik/media-progress-timer/master/timer.js"></script>
     <style type="text/css">
       .progress {
         height: 10px;
