Add link to demo

--- a/demo.html
+++ b/demo.html
@@ -72,6 +72,10 @@
         </div>
       </form>
       <pre id="log" class="well"></pre>
+      <p>
+        For more info see <a href="https://github.com/adamcik/media-progress-timer">
+          https://github.com/adamcik/media-progress-timer</a>.
+      </p>
     </div>
     <script type="text/javascript" src="timer.js"></script>
     <script type="text/javascript">
