Demo should link to _parent

--- a/demo.html
+++ b/demo.html
@@ -73,7 +73,7 @@
       </form>
       <pre id="log" class="well"></pre>
       <p>
-        For more info see <a href="https://github.com/adamcik/media-progress-timer">
+        For more info see <a target="_parent" href="https://github.com/adamcik/media-progress-timer">
           https://github.com/adamcik/media-progress-timer</a>.
       </p>
     </div>
