--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Progress timer demo</title>
     <style type="text/css">
-      body {
+      body, html {
         margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
       }
       iframe {
         border: 0;
@@ -14,6 +17,6 @@
     </style>
   </head>
   <body>
-    <iframe src="https://rawgit.com/adamcik/media-progress-timer/master/demo.html"></iframe>
+    <iframe width="100%" height="100%" frameborder="0" src="https://rawgit.com/adamcik/media-progress-timer/master/demo.html"></iframe>
   </body>
 </html>
